Update project: Implement nutrition report saving, fix JPA/Hibernate issues, and frontend updates

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>ASD儿童饮食与营养均衡系统</title>
-    <link rel="icon" href="static/favicon.ico">
+    <link rel="icon" href="/static/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
